# CosoriKettleBLE

./: .gitignore  AGENT.md  AGENTS.md  LIBRARY.md  PROTOCOL.md  README.md  TODO.md  cosori-kettle-example.yaml  hacs.json  pyproject.toml  scan.py  test_cpp.cpp
.github/workflows/: ci.yml
components/cosori_kettle_ble/: __init__.py  cosori_kettle_ble.cpp  cosori_kettle_ble.h  cosori_kettle_state.cpp  cosori_kettle_state.h  envelope.cpp  envelope.h  protocol.cpp  protocol.h  sensor.py
cosori_kettle/: cli.py  client.py  protocol.py  protocol_base.py  protocol_structs.py  state.py  stuff.md
custom_components/cosori_kettle_ble/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  sensor.py  strings.json  switch.py
custom_components/cosori_kettle_ble/cosori_kettle/: __init__.py  client.py  exceptions.py  kettle.py  protocol.py
custom_components/cosori_kettle_ble/translations/: en.json
docs/: CPP_VS_PYTHON.md
tests/: __init__.py  conftest.py  test_client.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_exceptions.py  test_kettle.py  test_protocol.py  test_protocol_messages.py
tests/ha_component/: conftest.py  test_protocol.py
